--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- App Description -->
     <meta name="description" content="AI-powered cryptocurrency trading terminal with real-time Binance integration and leverage trading">
     
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Tailwind CSS (via PostCSS) -->
     <style>
       body {
         background-color: #0f172a; /* Slate 900 */
